--- a/Vezba1/style.css
+++ b/Vezba1/style.css
@@ -1,7 +1,10 @@
+/* 5.krug so slika*/
 .parent {
   background-color: rgb(218, 236, 248);
-  width: 300px;
-  height: 150px;
+  width: 350px;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .child {
   background-color: rgb(207, 81, 33);
@@ -10,4 +13,19 @@
   border-radius: 50%;
   margin-left: auto;
   margin-right: auto;
+  display: flex;
+}
+.child > img {
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+/* 5.krug so slika*/
+.forma {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+form label {
+  font-weight: bold;
 }
